--- a/flex/index.html
+++ b/flex/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1>flex</h1>
+        <h1 class="title">flex</h1>
         <h1>flex - direction</h1>
         <span id="description"> flex-direction: row | row-reverse | column | column-reverse;</span>
         <div class="container">
@@ -25,8 +25,6 @@
             <div class="flex-items">10</div>
             <div class="flex-items">11</div>
             <div class="flex-items">12</div> -->
-
-            
         </div>
     </div>
     <script>
